header atualizar com logos vetoriais

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="navbar__container">
             <div class="navbar__logo">
                 <a href="#hero">
-                    <img src="assets/images/cownie_logo_white.png" alt="Cownie"
+                    <img src="assets/images/cownie_logo_white.svg" alt="Cownie"
                         class="navbar__logo-image navbar__logo-white">
-                    <img src="assets/images/cownie_logo_brown.png" alt="Cownie"
+                    <img src="assets/images/cownie_logo_brown.svg" alt="Cownie"
                         class="navbar__logo-image navbar__logo-brown">
                 </a>
             </div>
@@ -68,7 +68,7 @@
         <!-- Hero Logo -->
         <div class="hero__logo-container">
             <div class="hero__logo-frame">
-                <img src="assets/images/cownie_logo_brown.png" alt="Cownie Logo" class="hero__logo-image">
+                <img src="assets/images/cownie_logo_brown.svg" alt="Cownie Logo" class="hero__logo-image">
                 <p class="hero__logo-subtitle">Cookies e Brownies</p>
             </div>
         </div>
