Animação e seção de produtos correto

--- a/index.html
+++ b/index.html
@@ -58,12 +58,9 @@
 
     <!-- ========== HEADER/HERO SECTION ========== -->
     <header id="hero" class="hero">
-        <!-- Hero Video Background -->
+        <!-- Hero Canvas Background (Frame Sequence) -->
         <div class="hero__video-container">
-            <video class="hero__video" muted playsinline preload="auto">
-                <source src="assets/videos/hero_video1.mp4" type="video/mp4">
-                Seu navegador não suporta vídeos HTML5.
-            </video>
+            <canvas id="hero-canvas" class="hero__canvas"></canvas>
         </div>
 
         <!-- Hero Logo -->
