Secao de produtos otimizada

--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
             <!-- ========== CATALOG/PRODUCTS SECTION (FLIP BOOK) ========== -->
             <section id="catalog" class="catalog">
                 <div class="catalog__container">
-                    <h2 class="catalog__title">Nossos Produtos</h2>
-                    <p class="catalog__subtitle">Folheie nosso catálogo interativo</p>
+                    <h2 class="catalog__title">Folheie nosso catálogo</h2>
 
                     <!-- Flip Book Container -->
                     <div class="flipbook">
@@ -320,6 +319,7 @@
     <!-- ========== END MAIN CONTENT WRAPPER ========== -->
 
     <script src="scrollytelling-lock.js"></script>
+    <script src="navbar-catalog.js"></script>
     <script src="script.js"></script>
 </body>
 
