Alteracoes no Footer e no cursor

--- a/index.html
+++ b/index.html
@@ -279,39 +279,10 @@
 
         <!-- ========== FOOTER SECTION ========== -->
         <footer id="footer" class="footer">
-            <div class="footer__container">
-
-                <!-- Contact Information -->
-                <div class="footer__section">
-                    <h3 class="footer__title">Contato</h3>
-                    <p class="footer__text">Email: contato@cownie.com.br</p>
-                    <p class="footer__text">Telefone: (11) 99999-9999</p>
-                    <p class="footer__text">WhatsApp: (11) 98888-8888</p>
-                </div>
-
-                <!-- Useful Links -->
-                <div class="footer__section">
-                    <h3 class="footer__title">Links Úteis</h3>
-                    <ul class="footer__links">
-                        <li><a href="#about">Sobre Nós</a></li>
-                        <li><a href="#catalog">Produtos</a></li>
-                        <li><a href="#social">Redes Sociais</a></li>
-                    </ul>
-                </div>
-
-                <!-- Business Hours -->
-                <div class="footer__section">
-                    <h3 class="footer__title">Horário de Atendimento</h3>
-                    <p class="footer__text">Segunda a Sexta: 9h às 18h</p>
-                    <p class="footer__text">Sábado: 9h às 14h</p>
-                    <p class="footer__text">Domingo: Fechado</p>
-                </div>
-
-            </div>
-
-            <!-- Copyright -->
-            <div class="footer__copyright">
-                <p>&copy; 2026 Cownie. Todos os direitos reservados.</p>
+            <div class="footer__content">
+                <p>&copy; 2026 Cownie. Todos os direitos reservados. | Desenvolvido por <a
+                        href="https://www.execflow.com.br" target="_blank" rel="noopener noreferrer"
+                        class="footer__link">ExecFlow</a></p>
             </div>
         </footer>
         <!-- ========== END FOOTER SECTION ========== -->
